# routes/routes.go
@@ -29,6 +29,7 @@ func SetupRoutes(r *gin.Engine) {
 			protected.GET("/servers/:serverId/channels", controllers.GetChannelsByServerID)
 
 			protected.POST("/channels/:channelId/messages", controllers.CreateMessage)
+			protected.GET("/channels/:channelId/messages", controllers.GetMessagesByChannelID)
 		}
 	}
 
